--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,93 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/68tgLBE.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 09 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/Lc8jO4d.gif"/><br>
+this is a very special month, since it's the 1 year anniversary of middlepot.com + i turn 21 <img src="https://i.imgur.com/adJshVZ.gif"/><br>
+i wish i could express in words how much i love this place and how i love to post here ♡ !!<br>
+it was definitely the best thing i've done to date and i plan to make it better and better for me and you fluffies, so don't hesitate to send me your opinions and tips <img src="https://i.imgur.com/4uVV3q3.gif"/><br>
+<br>
+the days are going very smoothly and i just baked marshmallows, so i'm a comfy girl <img src="https://i.imgur.com/gnlwVsb.gif"/><br>
+i hope everything stays this way until saturday, which is my birthday, because i'll go on a date with my beloved bubu and i want it to be perfect ♡ ♡ ♡<br>
+<br>
+this post will be full of soft and cozy things, all in a similar aesthetic that i've been wanting to work with for some time, i recommend you eat something sweet to get into it <img src="https://i.imgur.com/hq0iHtO.gif"/><br>
+to start, i've made a new page for the aesthetic book !<br>
+it's so fun to make these collages, i really want to do it often, if you support me ♡<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/Wtz6hr6.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!A5phyTBB!ZKAFVU7KRvondJO-1pIupULt8-9dmoVDU0_BySUarsM" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">honey morning html .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i think this activity is very good for practicing dealing with aesthetics other than my main one, and as i've been aiming to improve my "beautifying" skills i'm doing my best to try different things while maintaining my individuality.<br>
+do you think i'm doing well ?<br>
+<br>
+the melody i used this time was this one :<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/jw1bqb.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">toy chest .mp3</font></a>　
+</center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's soft and friendly, just like a teddy bear, so i think it fits well <img src="https://i.imgur.com/x3yjjEc.gif"/><br>
+<br>
+and talking about teddy bears, i had a sudden idea when i saw my png folder and realized that i had a lot of stuffed animals in there ( 56 specifically )<br>
+i had to do something with them urgently, they can't just be homeless and all over the place <img src="https://i.imgur.com/dwoRLsQ.gif"/><br>
+so i started to make a html page that was comfortable to store them, organizing my virtual stuffie collection !!!<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/HlNhsmu.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!thQlUCaJ!fwCyd7-WSQef4_EtxfKdrVVNRlFT44mV6m6-5vaMzEI" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">virtualstuffie .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+with, of course, a cute url ( bear.shop.tm )<br>
+i really enjoyed doing it and i'm very pleased with the result. did you like it ♡ ?<br>
+<br>
+today i want to write some important tips to you who often feel dissociated and confused with your very existence.<br>
+it is a very complicated subject, but i know what i'm going to say here is a good introduction to reflections and learning that you will have to follow on your own ; getting started is usually difficult so i'll say the method i chose to better understand myself, my passions and goals.<br>
+will i really be able to help someone with these words ? <img src="https://i.imgur.com/gy3kOEy.gif"/><br>
+i wish from the bottom of my heart !<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i know that the pursuit of self-knowledge is something that never ends, but i, being young, realize that young people usually seek to be special in some way, seeking individuality. the thing is that we are all different and have individualities already, if you don't know which ones you can't enjoy this right, you can't be yourself and improve, so you just become artificial and sad. adults also don't usually know who they are, they just let it go, it makes them more and more faded, which is extremely sad. feeling dissociated and not knowing who you are is a bad feeling and should not be taken to life, so i will try to help you by saying how i managed to understand who i really am and my individuality, i hope it can help some of you too !<br>
+something that helped me a lot to understand who i am were the aesthetics. i know this is a very recent term and it may seem rather silly and superficial, but you can call it other things too, since it has always existed : style, spectrum, tendency, essence.. i like to call it aesthetics because i am quite visual, but you must understand that what i mean by that is the essence of who you are, represented through visuals, personality, lifestyle, passions and others.<br>
+we are very stimulated seeing beautiful and wonderful things everywhere, aesthetics that we want for ourselves. the problem is that we can not be all things, although we have different moods and personal tastes, there are limits to who we can be ; when you go beyond these limits you feel dissociated and uncomfortable. only you can know who you really are and when you're not being yourself, so you must first learn to understand your feelings and not be carried away by the desires of being someone different, you are perfect being who you are, people are beautiful and perfect in different ways ( and only when they are being themselves ).<br>
+you certainly have personal tastes and should not suppress them to fit into groups, your personal tastes help you a lot to understand your personal essence ( we don't really can choose to like things voluntarily, we just like it ). i discovered who i am separating my personal tastes : whenever i had to choose a color, a music, a food, a place, above all others, although i like lots of different things, i always had a specific preference , there was a clear pattern in these things, despite different moods. in this way, through experimentation, i was able to discover my favorite aesthetic. and i must say, you will not find yours coming from someone else, you will only find elements that will compose your personal aesthetic. aesthetics carry specific messages and feelings, so you must understand what you are looking for.<br>
+it may seem confusing, but for example, i started by just liking cute, delicate, and feminine things ; within that there may be infinite variations, so i sometimes felt confused and uncomfortable with some cute things that did not really match me. "but i like cute stuff, what's the problem ??" i thought. the problem is that i am me, i am a person, people are complex. i began to realize that i felt artificial when trying to adhere some elements that didn't represent me ( despite being visually alike, carried different feelings ). gradually i separated the elements and composed some aesthetics that i really liked and i felt comfortable about it, until i discovered my ult fav one.<br>
+i have a tip for you : always think about the adjectives that define things, these adjectives should complement and make sense to you, should be pleasant and make you feel good ( even the negative ones ). you must do this with all things, not just with visuals, since your essence is present in all the things that make up you.<br>
+by understanding who you are, it will be much easier to self improve, you will be able to have healthier relationships and help people, you will have better self esteem, you will better understand your personality ( and therefore take better care of yourself as you will understand your limits ), you will be able to find hobbies, to find out what you want to do with your life, you will be happier and will continue to be free to enjoy things that "don't fit" your main aesthetic, since this is also part of your individuality and should not be denied. as i always say here, you must always seek purity.<br>
+i would like to make it clear that you should think about yourself rather than what others feel about you or how other people "should" see you. only you can know yourself deeply and truthfully. people should see you as you really are, you must be yourself and you should not be a walking lie to please others, therefore you will not please anyone or even yourself ! lies are always bad.<br>
+<br><br>
+i hope my words are useful ///<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/lbl3mss.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/68tgLBE.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/4Id7F0K.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
