--- a/contact.html
+++ b/contact.html
@@ -325,7 +325,7 @@ position: relative;
 <p style="font-size:10px;line-height:70%;">
 <br><br></p>
 <center>
-　　<a href="https://www.elo7.com.br/shybunny" target="_blank"><img src="https://i.imgur.com/gtevTSn.gif"/></a></center>
+　　<a href="https://shybunny.middlepot.com" target="_blank"><img src="https://i.imgur.com/gtevTSn.gif"/></a></center>
 
 </div>
 
@@ -341,10 +341,10 @@ position: relative;
 
 
 <script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.2522" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.8096" type="text/javascript"></script>
 <script type="text/javascript">
    JotForm.init(function(){
-      JotForm.alterTexts({"alphabetic":"Este campo pode conter apenas letras","alphanumeric":"Este campo só pode conter letras e números.","ccInvalidCVC":"Single Product w/ Single Choice Orders ","ccInvalidExpireDate":"Data de expiração é inválido.","ccInvalidNumber":"Número do cartão de crédito é inválido.","ccMissingDetails":"Por favor, preencha os detalhes do cartão de crédito.","ccMissingDonation":"Por favor, indique valores numéricos para montante da doação.","ccMissingProduct":"Por favor, selecione pelo menos um produto.","characterLimitError":"Too many Characters.  The limit is","characterMinLimitError":"Too few characters. The minimum is","confirmClearForm":"Você tem certeza que quer limpar este formulário?","confirmEmail":"E-mail não confere","currency":"Este campo apenas admite valores monetários.","cyrillic":"Este campo aceita apenas caracteres cirilicos.","dateInvalid":"Esta data não é válido. O formato da data é {format}","dateInvalidSeparate":"Esta data não é válido. Insira um válido {element}.","dateLimited":"Esta data não está disponível.","disallowDecimals":"Por favor insira um número inteiro.","email":"Digite um endereço de e-mail válido.","fillMask":"Valor do campo deve preencher máscara.","freeEmailError":"Não são permitidas contas de email gratuitas","generalError":"Existem alguns erros no formulário. Corrija-os antes de continuar. ","generalPageError":"Há erros nesta página. Por favor, corrija-os antes de continuar.","gradingScoreError":"Pontuação total deve ser menor ou igual a ","incompleteFields":"Há campos obrigatórios incompletos. Por favor, preencha-os.","inputCarretErrorA":"A entrada não deve ser menor do que o valor mínimo:","inputCarretErrorB":"Valor não deve ser maior do que o máximo:","lessThan":"A sua pontuação deve ser inferior ou igual a","maxDigitsError":"O numero máximo de caracteres permitidos são","maxSelectionsError":"The maximum number of selections allowed is","minSelectionsError":"The minimum required number of selections is","multipleFileUploads_emptyError":"{file} está vazio, por favor selecione os arquivos de novo.","multipleFileUploads_fileLimitError":"Somente são permitidos {fileLimit} envios de arquivos","multipleFileUploads_minSizeError":"{file} é muito pequeno, o tamanho mínimo do arquivo é {minSizeLimit}.","multipleFileUploads_onLeave":"Os arquivos agora estão em upload, se você sair agora o upload será cancelado.","multipleFileUploads_sizeError":"{file} é muito grande, o tamanho máximo é {sizeLimit}.","multipleFileUploads_typeError":"O arquivo {file} é inválido, pois somente as extensões {extensions} são permitidas.","numeric":"Este campo pode conter apenas números","pastDatesDisallowed":"A data não pode ser passada.","pleaseWait":"Please wait...","required":"Este campo é obrigatório.","requireEveryCell":"Toda célula é requisitada.","requireEveryRow":"Todos os campos são requeridos.","requireOne":"Pelo menos um campo é requisitado","submissionLimit":"Foi mal, mas apenas um envio de dados é permitido. Múltiplas submissões estão desativadas nesse formulário.","uploadExtensions":"Só pode fazer upload dos seguintes ficheiros:","uploadFilesize":"O tamanho do arquivo não pode ser maior que:","uploadFilesizemin":"O ficheiro não pode ser menor que:","url":"Este campo apenas pode conter um URL v&amp;Atilde;&amp;iexcl;lido","wordLimitError":"Too many words. The limit is","wordMinLimitError":"Too few words.  The minimum is"});
+      JotForm.alterTexts({"alphabetic":"Este campo pode conter apenas letras","alphanumeric":"Este campo só pode conter letras e números.","ccInvalidCVC":"Single Product w/ Single Choice Orders ","ccInvalidExpireDate":"Data de expiração é inválido.","ccInvalidNumber":"Número do cartão de crédito é inválido.","ccMissingDetails":"Por favor, preencha os detalhes do cartão de crédito.","ccMissingDonation":"Por favor, indique valores numéricos para montante da doação.","ccMissingProduct":"Por favor, selecione pelo menos um produto.","confirmClearForm":"Você tem certeza que quer limpar este formulário?","confirmEmail":"E-mail não confere","currency":"Este campo apenas admite valores monetários.","cyrillic":"Este campo aceita apenas caracteres cirilicos.","dateInvalid":"Esta data não é válido. O formato da data é {format}","dateInvalidSeparate":"Esta data não é válido. Insira um válido {element}.","dateLimited":"Esta data não está disponível.","disallowDecimals":"Por favor insira um número inteiro.","email":"Digite um endereço de e-mail válido.","fillMask":"Valor do campo deve preencher máscara.","freeEmailError":"Não são permitidas contas de email gratuitas","generalError":"Existem alguns erros no formulário. Corrija-os antes de continuar. ","generalPageError":"Há erros nesta página. Por favor, corrija-os antes de continuar.","gradingScoreError":"Pontuação total deve ser menor ou igual a ","incompleteFields":"Há campos obrigatórios incompletos. Por favor, preencha-os.","inputCarretErrorA":"A entrada não deve ser menor do que o valor mínimo:","inputCarretErrorB":"Valor não deve ser maior do que o máximo:","lessThan":"A sua pontuação deve ser inferior ou igual a","maxDigitsError":"O numero máximo de caracteres permitidos são","multipleFileUploads_emptyError":"{file} está vazio, por favor selecione os arquivos de novo.","multipleFileUploads_fileLimitError":"Somente são permitidos {fileLimit} envios de arquivos","multipleFileUploads_minSizeError":"{file} é muito pequeno, o tamanho mínimo do arquivo é {minSizeLimit}.","multipleFileUploads_onLeave":"Os arquivos agora estão em upload, se você sair agora o upload será cancelado.","multipleFileUploads_sizeError":"{file} é muito grande, o tamanho máximo é {sizeLimit}.","multipleFileUploads_typeError":"O arquivo {file} é inválido, pois somente as extensões {extensions} são permitidas.","numeric":"Este campo pode conter apenas números","pastDatesDisallowed":"A data não pode ser passada.","required":"Este campo é obrigatório.","requireEveryCell":"Toda célula é requisitada.","requireEveryRow":"Todos os campos são requeridos.","requireOne":"Pelo menos um campo é requisitado","submissionLimit":"Foi mal, mas apenas um envio de dados é permitido. Múltiplas submissões estão desativadas nesse formulário.","uploadExtensions":"Só pode fazer upload dos seguintes ficheiros:","uploadFilesize":"O tamanho do arquivo não pode ser maior que:","uploadFilesizemin":"O ficheiro não pode ser menor que:","url":"Este campo apenas pode conter um URL v&amp;Atilde;&amp;iexcl;lido"});
 	JotForm.clearFieldOnHide="disable";
     /*INIT-END*/
 });
@@ -353,13 +353,11 @@ position: relative;
    setTimeout(function() {
 JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * ･ ᵍ ᵒ !","type":"control_button"},{"name":"yourLovely3","qid":"3","text":"。your lovely name :","type":"control_fullname"},{"name":"yourEmail4","qid":"4","text":"。your email :","type":"control_email"},{"name":"yourText5","qid":"5","text":"。your text :","type":"control_textarea"},{"name":"cabecalho","qid":"6","text":"contact me ♡","type":"control_head"}]);}, 20); 
 </script>
-<link href="https://cdn.jotfor.ms/static/formCss.css?3.3.2522" rel="stylesheet" type="text/css" />
-<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.2522" />
-<link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.2522" />
+<link href="https://cdn.jotfor.ms/static/formCss.css?3.3.8096" rel="stylesheet" type="text/css" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.8096" />
+<link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.8096" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/566a91c2977cdfcd478b4567.css?"/>
 <style type="text/css">
-
-
     .form-label-left{
         width:150px;
     }
@@ -551,7 +549,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
   -ms-transition-timing-function: ease;
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
-  background-color: #ffffe0;
+  background-color: #fff8f8;
 }
 /* omer */
 .form-radio-item,
@@ -566,6 +564,21 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
 .form-single-column .form-checkbox-item,
 .form-single-column .form-radio-item {
   width: 100%;
+}
+.form-checkbox-item .editor-container div,
+.form-radio-item .editor-container div {
+  position: relative;
+}
+.form-checkbox-item .editor-container div:before,
+.form-radio-item .editor-container div:before {
+  display: inline-block;
+  vertical-align: middle;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  left: 0;
+  width: 18px;
+  height: 18px;
 }
 .supernova {
   height: 100%;
@@ -726,7 +739,14 @@ li[data-type="control_image"] img {
   width: auto;
 }
 .form-line-error {
-  overflow: hidden;
+  background-color: #fff9f9;
+  -webkit-box-shadow: inset 0px 3px 11px -7px #ecd5d5;
+  -moz-box-shadow: inset 0px 3px 11px -7px #ecd5d5;
+  box-shadow: inset 0px 3px 11px -7px #ecd5d5;
+}
+.form-line-error input:not(#coupon-input),
+.form-line-error textarea,
+.form-line-error .form-validation-error {
   -webkit-transition-property: none;
   -moz-transition-property: none;
   -ms-transition-property: none;
@@ -742,29 +762,43 @@ li[data-type="control_image"] img {
   -ms-transition-timing-function: ease;
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
-  background-color: #fff4f4;
+  border: 1px solid #fff4f4;
+  -moz-box-shadow: 0 0 3px #fff4f4;
+  -webkit-box-shadow: 0 0 3px #fff4f4;
+  box-shadow: 0 0 3px #fff4f4;
 }
 .form-line-error .form-error-message {
-  background-color: #ff3200;
-  clear: both;
-  float: none;
+  margin: 0;
+  position: absolute;
+  color: #fff;
+  display: inline-block;
+  right: 0;
+  font-size: 10px;
+  position: absolute!important;
+  box-shadow: none;
+  top: 0px;
+  line-height: 20px;
+  color: #FFF;
+  background: #ecd5d5;
+  padding: 0px 5px;
+  bottom: auto;
+  min-width: 105px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
 }
+.form-line-error .form-error-message img,
 .form-line-error .form-error-message .form-error-arrow {
-  border-bottom-color: #ff3200;
-}
-.form-line-error input:not(#coupon-input),
-.form-line-error textarea,
-.form-line-error .form-validation-error {
-  border: 1px solid #ff3200;
-  -webkit-box-shadow: 0 0 3px #ff3200;
-  -moz-box-shadow: 0 0 3px #ff3200;
-  box-shadow: 0 0 3px #ff3200;
+  display: none;
 }
 .ie-8 .form-all {
   margin-top: auto;
   margin-top: initial;
 }
 .ie-8 .form-all:before {
+  display: none;
+}
+[data-type="control_clear"] {
   display: none;
 }
 /* | */
@@ -861,6 +895,10 @@ li[data-type="control_image"] img {
     box-sizing: border-box;
     max-width: initial !important;
   }
+  .form-radio-other-input,
+  .form-checkbox-other-input {
+    max-width: 55% !important;
+  }
   .form-dropdown,
   .form-textarea,
   .form-textbox {
@@ -875,6 +913,10 @@ li[data-type="control_image"] img {
   .form-textbox,
   .form-dropdown {
     max-width: initial!important;
+  }
+  .form-checkbox-item:not(#foo),
+  .form-radio-item:not(#foo) {
+    width: 100%;
   }
   .form-address-city,
   .form-address-line,
@@ -909,18 +951,25 @@ li[data-type="control_image"] img {
   }
   [data-type=control_phone] .form-sub-label-container {
     width: 65%;
+    margin-right: 0;
+    margin-left: 0;
+    float: left;
   }
   [data-type=control_phone] .form-sub-label-container:first-child {
     width: 31%;
     margin-right: 4%;
   }
-  [data-type=control_datetime] .form-sub-label-container + .form-sub-label-container,
-  [data-type=control_datetime] .form-sub-label-container:first-child {
-    width: 27.3%;
-    margin-right: 6%;
+  [data-type=control_datetime] .allowTime-container {
+    width: 100%;
   }
-  [data-type=control_datetime] .form-sub-label-container + .form-sub-label-container + .form-sub-label-container {
-    width: 33.3%;
+  [data-type=control_datetime] .form-sub-label-container:first-child {
+    width: 10%!important;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  [data-type=control_datetime] .form-sub-label-container + .form-sub-label-container {
+    width: 24%!important;
+    margin-left: 6%;
     margin-right: 0;
   }
   [data-type=control_datetime] span + span + span > span:first-child {
@@ -928,18 +977,17 @@ li[data-type="control_image"] img {
     width: 100% !important;
   }
   [data-type=control_birthdate] .form-sub-label-container,
-  [data-type=control_datetime] span + span + span > span:first-child + span + span,
   [data-type=control_time] .form-sub-label-container {
     width: 27.3%!important;
     margin-right: 6% !important;
   }
-  [data-type=control_birthdate] .form-sub-label-container:last-child,
   [data-type=control_time] .form-sub-label-container:last-child {
     width: 33.3%!important;
     margin-right: 0 !important;
   }
   .form-pagebreak-back-container,
   .form-pagebreak-next-container {
+    min-height: 1px;
     width: 50% !important;
   }
   .form-pagebreak-back,
@@ -1031,11 +1079,19 @@ li[data-type="control_image"] img {
 }
 
 cursor: url(//i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
-  
-  }
- ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
- ::-moz-selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
+a:hover {
+    cursor : url(//i.imgur.com/LY1tJ6u.png), progress;
+}
+
+::selection {
+    text-shadow : 0 0 2px #ddd3ce;
+    color : #afa7a3;
+}
+
+::-moz-selection {
+    text-shadow : 0 0 2px #ddd3ce;
+    color : #afa7a3;
+}
 
 .form-input-wide {
 
@@ -1066,7 +1122,7 @@ a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
     padding-left : 3px;
     padding-right : 3px;
     outline : none;
-    background-image : url(https://i.imgur.com/sv5ycN6.png);
+    background-image : url(//i.imgur.com/sv5ycN6.png);
     font-family : Verdana;
     font-size : 10px;
     COLOR : #a58282;
@@ -1082,7 +1138,7 @@ a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
     padding-left : 3px;
     outline : none;
     padding-right : 3px;
-    background-image : url(https://i.imgur.com/sv5ycN6.png);
+    background-image : url(//i.imgur.com/sv5ycN6.png);
     font-family : Verdana;
     font-size : 10px;
     COLOR : #a58282;
@@ -1122,7 +1178,7 @@ a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
         <div class="form-header-group ">
           <div class="header-text httal ">
             <h3 id="header_6" class="form-header" data-component="header">
-              <font size="3">contact me ♡</font>
+              contact me ♡
             </h3>
           </div>
         </div>
@@ -1131,13 +1187,13 @@ a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
         <label class="form-label form-label-left form-label-auto" id="label_3" for="first_3"> 。your lovely name : </label>
         <div id="cid_3" class="form-input">
           <div data-wrapper-react="true">
-            <span class="form-sub-label-container" style="vertical-align:top;">
+            <span class="form-sub-label-container" style="vertical-align:top">
               <input type="text" id="first_3" name="q3_yourLovely3[first]" class="form-textbox" size="10" value="" data-component="first" />
-              <label class="form-sub-label" for="first_3" id="sublabel_first" style="min-height:13px;"> first </label>
+              <label class="form-sub-label" for="first_3" id="sublabel_first" style="min-height:13px"> first </label>
             </span>
-            <span class="form-sub-label-container" style="vertical-align:top;">
+            <span class="form-sub-label-container" style="vertical-align:top">
               <input type="text" id="last_3" name="q3_yourLovely3[last]" class="form-textbox" size="15" value="" data-component="last" />
-              <label class="form-sub-label" for="last_3" id="sublabel_last" style="min-height:13px;"> last </label>
+              <label class="form-sub-label" for="last_3" id="sublabel_last" style="min-height:13px"> last </label>
             </span>
           </div>
         </div>
@@ -1156,9 +1212,9 @@ a:hover {cursor: url(//i.imgur.com/LY1tJ6u.png), progress;
       </li>
       <li class="form-line" data-type="control_button" id="id_2">
         <div id="cid_2" class="form-input-wide">
-          <div style="margin-left:156px;" class="form-buttons-wrapper">
+          <div style="margin-left:156px" class="form-buttons-wrapper">
             <button id="input_2" type="submit" class="form-submit-button" data-component="button">
-              . * ･ ᵍ ᵒ !
+              ･ ˢᵉᶯᵈ ･
             </button>
           </div>
         </div>
