--- a/soft-collection.html
+++ b/soft-collection.html
@@ -324,7 +324,7 @@ position: relative;
 <p style="font-size:10px;line-height:70%;">
 <br><br></p>
 <center>
-　　<a href="https://www.elo7.com.br/shybunny" target="_blank"><img src="https://i.imgur.com/gtevTSn.gif"/></a></center>
+　　<a href="https://shybunny.middlepot.com" target="_blank"><img src="https://i.imgur.com/gtevTSn.gif"/></a></center>
 
 </div>
 
