--- a/status.html
+++ b/status.html
@@ -357,7 +357,7 @@ position: relative;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">needy</font> <img src="https://i.imgur.com/WMKsOT0.gif">
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">excited</font> <img src="https://i.imgur.com/qt31luh.gif">
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -367,6 +367,9 @@ position: relative;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>10.23.18</sup></font> <font color="#c48d8d">→</font>　shy bunny store is open ♡ !!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>10.11.18</sup></font> <font color="#a0acbc">→</font>　i want to be tiny & sleep in your<br>　　　　　　　　　pocket
 
 <br><br><br>
@@ -392,9 +395,6 @@ position: relative;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>07.15.18</sup></font> <font color="#bea5ce">→</font>　♡ pão de queijo + coffee ♡
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>07.05.18</sup></font> <font color="#c48d8d">→</font>　thank you so much for your<br>　　　　　　　　　support ♡ !
 
 
 </div>
