--- a/index.html
+++ b/index.html
@@ -355,7 +355,6 @@ position: relative;
 </div></center>
 
 <br>
-<br>
 <img src="https://i.imgur.com/SS3uOVJ.png"/>
 <br><br>
 <textarea style="height:8px; width:50px;  border:1px dashed #8A2316; -moz-border-radius: 20px;
@@ -365,7 +364,8 @@ position: relative;
 <br><br><br>
 
 <font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . october . 23</font></font></font>
-<br>
+<br><br>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a href="https://shybunny.middlepot.com" target="_blank"><font color="#cc7a7a" style="padding-bottom: 2px; border-bottom:1px dashed #d8c0ad;"> visite minha lojinha </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br><br><br>
 <img src="https://i.imgur.com/VUf1twI.png"/>
 <br>
