--- a/milky-woods.html
+++ b/milky-woods.html
@@ -517,16 +517,20 @@ click to play !
 <br><br>
 <table style="border-spacing: 5px;">
 <tr>
+<td><a href="https://middlepot.com/tinykittens"><img height="auto" width="100" src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
 <td><a href="https://middlepot.com/bunnyshop"><img height="auto" width="100" src="https://i.imgur.com/Beri781.gif"/></a> </td>
+</tr>
+<tr>
 <td><a href="https://middlepot.com/honeytime"><img height="auto" width="100" src="https://i.imgur.com/mytMMb1.png"/></a> </td>
-</tr>
-<tr>
 <td><a href="https://middlepot.com/softdesserts"><img height="auto" width="100" src="https://i.imgur.com/iUrLxM9.png"/></a> </td>
-<td><a href="https://middlepot.com/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
 </tr>
 <tr>
+<td><a href="https://middlepot.com/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
 <td><a href="https://middlepot.com/drawing"><img height="auto" width="100" src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
+</tr>
+<tr>
 <td><a href="https://middlepot.com/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/T9HOVZQ.png"/></a> </td>
+<td></td>
 </tr>
 </table>
 
@@ -535,14 +539,6 @@ click to play !
 <img src="https://i.imgur.com/k7NxBbW.gif"/>
 
 <br><br><br>
-<br>
-<img src="https://i.imgur.com/mCvSk0L.png"/>
-<br><br>
-<textarea style="height:8px; width:50px;  border:1px dashed #8A2316; -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/mCvSk0L.png"></a></textarea>
-<br><br><br><br>
 
 
 </center>
