--- a/portfolio.html
+++ b/portfolio.html
@@ -373,7 +373,7 @@ position: relative;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<object width="200" height="auto"><param value="https://files.catbox.moe/ty0njy.swf" name="movie"/><param value="high" name="quality"/><embed width="200" height="auto" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/ty0njy.swf"></embed></object>
+<object width="300" height="300"><param value="https://files.catbox.moe/8oq43k.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/8oq43k.swf"></embed></object>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
